--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "@google/genai": "^1.30.0",
-    "jszip": "3.10.1"
+    "jszip": "3.10.1",
+    "framer-motion": "^12.23.24"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
